// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey certified and readOnly to false 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          certified.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          certified.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-9vwyyl-MuiTypography-root"
          >
            subtitle
          </p>
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="deleteGroupSrLabel"
                      class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-1wxstni-MuiSvgIcon-root"
                      data-testid="DeleteOutlineIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-1cq4abl-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1efkf0c-MuiSvgIcon-root"
                            data-testid="DeleteOutlineIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
                />
                <div
                  class="MuiBox-root css-1rsi9ws"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    addBtn
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              addBtn
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey certified and readOnly to true 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          certified.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          certified.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-9vwyyl-MuiTypography-root"
          >
            subtitle
          </p>
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="deleteGroupSrLabel"
                      class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1db085k-MuiSvgIcon-root"
                      data-testid="DeleteOutlineIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-1cq4abl-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeSmall css-me1rrz-MuiSvgIcon-root"
                            data-testid="DeleteOutlineIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              addBtn
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey declared and readOnly to false 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          declared.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          declared.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-9vwyyl-MuiTypography-root"
          >
            subtitle
          </p>
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="deleteGroupSrLabel"
                      class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-1wxstni-MuiSvgIcon-root"
                      data-testid="DeleteOutlineIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-1cq4abl-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1efkf0c-MuiSvgIcon-root"
                            data-testid="DeleteOutlineIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
                />
                <div
                  class="MuiBox-root css-1rsi9ws"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    addBtn
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              addBtn
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              createBtn
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey declared and readOnly to true 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          declared.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          declared.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-9vwyyl-MuiTypography-root"
          >
            subtitle
          </p>
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="deleteGroupSrLabel"
                      class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1db085k-MuiSvgIcon-root"
                      data-testid="DeleteOutlineIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-1cq4abl-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeSmall css-me1rrz-MuiSvgIcon-root"
                            data-testid="DeleteOutlineIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              addBtn
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              createBtn
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey verified and readOnly to false 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          verified.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          verified.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-9vwyyl-MuiTypography-root"
          >
            subtitle
          </p>
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="deleteGroupSrLabel"
                      class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-1wxstni-MuiSvgIcon-root"
                      data-testid="DeleteOutlineIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-1cq4abl-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeSmall css-1efkf0c-MuiSvgIcon-root"
                            data-testid="DeleteOutlineIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-9mgopn-MuiDivider-root"
                />
                <div
                  class="MuiBox-root css-1rsi9ws"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    addBtn
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              addBtn
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              createBtn
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Checks that AttributeGroup snapshot don't change > renders correctly with attributeKey verified and readOnly to true 1`] = `
<body>
  <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1w5x330-MuiPaper-root"
    >
      <div
        class="css-1okj3ks-MuiStack-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
        >
          verified.label
        </h2>
        <span
          class="MuiTypography-root MuiTypography-caption css-ol7wxs-MuiTypography-root"
        >
          verified.description
           
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-17dcqu8-MuiTypography-root-MuiLink-root"
            href="https://docs.pagopa.it/interoperabilita-1/manuale-operativo/attributi"
            target="_blank"
          >
            howLink
          </a>
        </span>
      </div>
      <div
        class="MuiBox-root css-1yuhvjn"
      >
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-9vwyyl-MuiTypography-root"
          >
            subtitle
          </p>
          <div
            class="css-1lwbda4-MuiStack-root"
          >
            <div
              class="MuiBox-root css-ydo5m"
            >
              <div
                class="css-42v4ct-MuiStack-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ndaqpv-MuiTypography-root"
                >
                  title
                </p>
                <div
                  class="MuiBox-root css-0"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedText MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="deleteGroupSrLabel"
                      class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1db085k-MuiSvgIcon-root"
                      data-testid="DeleteOutlineIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root css-hhy13k"
              >
                <ul
                  class="css-1cq4abl-MuiStack-root"
                >
                  <li
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="css-1yo1jo6-MuiStack-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 css-6fsf27-MuiTypography-root"
                      >
                        Attribute Name
                      </p>
                      <div
                        class="css-1n0vvv1-MuiStack-root"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-14wetfy-MuiButtonBase-root-MuiButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeSmall css-me1rrz-MuiSvgIcon-root"
                            data-testid="DeleteOutlineIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM8 9h8v10H8V9zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                            />
                          </svg>
                        </button>
                        <button
                          aria-label="showInfoSrLabel"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                            data-testid="InfoIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="MuiTypography-root MuiTypography-body2 css-1besck7-MuiTypography-root"
                      >
                        or
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1lwbda4-MuiStack-root"
        >
          <div
            class="css-9v4aab-MuiStack-root"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              addBtn
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall Mui-disabled MuiButton-root MuiButton-naked MuiButton-nakedPrimary MuiButton-sizeSmall MuiButton-nakedSizeSmall css-1074q1t-MuiButtonBase-root-MuiButton-root"
              disabled=""
              tabindex="-1"
              type="button"
            >
              createBtn
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
